# OmniTune_TT_Next

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: pubspec.yaml
app/lib/: api_client.dart  audio_player_ffi.dart  background_audio.dart  main.dart  metadata_cache.dart
app/lib/core/router/: app_router.dart
app/lib/core/theme/: app_colors.dart  app_dimens.dart  app_theme.dart
app/lib/data/models/: track.dart
app/lib/data/services/: background_audio.dart  metadata_cache.dart  remote_api.dart  secure_storage.dart  tray_service.dart
app/lib/features/auth/: auth_sheet.dart
app/lib/features/home/: home_screen.dart
app/lib/features/player/: equalizer_sheet.dart  lyrics_view.dart  mini_player.dart  now_playing_screen.dart  queue_view.dart
app/lib/features/search/: search_screen.dart
app/lib/features/settings/: settings_screen.dart
app/lib/features/shared/: async_views.dart  offline_banner.dart  track_artwork.dart  track_tile.dart
app/lib/features/shell/: app_shell.dart
app/lib/state/: auth_controller.dart  connectivity.dart  library_controller.dart  player_controller.dart  providers.dart  search_controller.dart
app/macos/Runner/: DebugProfile.entitlements  Release.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: track_test.dart  widget_test.dart
backend/: Dockerfile  Dockerfile.user_sync  go.mod  go.sum
backend/aggregator/: main.go
backend/aggregator/audius/: client.go
backend/aggregator/cache/: redis.go
backend/internal/httpmw/: cors.go
backend/internal/metrics/: metrics.go
backend/user_sync/: main.go
core/: CMakeLists.txt  TTPlayerCore.podspec
core/build_wasm/: TTPlayerCore.js  index.html
core/include/: AudioPlayer.h  AudioPlayer_c.h  Equalizer.h  FileScanner.h  LyricsParser.h  MetadataExtractor.h
core/src/: AudioPlayer.cpp  AudioPlayer_c.cpp  Equalizer.cpp  FileScanner.cpp  LyricsParser.cpp  MetadataExtractor.cpp
core/test/: test_core.cpp
deploy/helm/omnitune/: Chart.yaml  values.yaml
deploy/helm/omnitune/templates/: _helpers.tpl  aggregator.yaml  hpa.yaml  infra.yaml  ingress.yaml  secret.yaml  servicemonitor.yaml  user-sync.yaml  web.yaml
deploy/observability/: prometheus.yml
docs/: CLOUD_NATIVE.md  IMPLEMENTATION_STATUS.md  MOBILE_SETUP.md  PROJECT_PLAN.md  RELEASE.md  VERIFY.md
docs/tasks/: task-1-1-setup-core.md  task-1-2-error-handling.md  task-1-3-wasm-setup.md  task-1-4-flutter-init.md  task-1-5-dart-ffi.md  task-2-1-classic-skin.md  task-2-2-lrc-parser.md  task-2-3-file-scanner.md  task-2-4-equalizer.md  task-3-1-go-aggregator.md  task-3-2-audius-streaming.md  task-3-3-user-sync.md  task-3-4-containerization.md  task-4-1-desktop-features.md  task-4-2-mobile-optimization.md  task-4-3-final-profiling.md
kubernetes/: aggregator.yaml
scripts/: build_desktop.ps1  build_desktop.sh  deploy_kind.sh  emsdk_build.sh  setup_platforms.sh
web/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  wasmPlayer.ts
